# fswatcher

./: .travis.yml  Opts.hs  Pipeline.hs  README.md  flake.nix  fswatcher.cabal  fswatcher.hs  stack.yaml  watcher.cabal  watcher.hs
.builds/: debian-cabal.yml  nixos.yml
src/: Opts.hs  fswatcher.hs
