name:               watcher
category:           Tools
build-type:         Simple
version:            0.1
synopsis:           Watch a file/directory and run a command it is modified
description:        A simple program that watches a file or a directory and
                    runs a given command whenever the file or a file within the
                    directory is changed.
license:            BSD3
License-file:       LICENSE
author:             Erlend Hamberg
maintainer:         ehamberg@gmail.com
stability:          experimental
tested-with:        GHC==7.6.3
homepage:           http://www.github.com/ehamberg/watcher/
cabal-version:      >= 1.6


Executable watcher
    build-depends:   base            >= 4 && < 5
                   , unix            >= 2.5
                   , process         >= 1.1
                   , fsnotify        >= 0.0.4
                   , system-filepath >= 0.4
                   , directory       >= 1.2
    ghc-options:     -Wall
    main-is:         watcher.hs

source-repository head
  type:     git
  location: git://github.com/ehamberg/watcher.git
